--- a/app/app/src/main/res/layout/activity_create_event.xml
+++ b/app/app/src/main/res/layout/activity_create_event.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/createEventTitle"
@@ -19,8 +23,7 @@
         android:id="@+id/posterImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:src="@+id/posterImage"/>
+        android:padding="20dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -97,7 +100,34 @@
 
 
 
+
+
+
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/generateQRCodeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Generate QR Code"
+            />
+        <Button
+            android:id="@+id/reuseQRCodeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reuse QR Code"
+            />
+    </LinearLayout>
+    <ImageView
+        android:id="@+id/QRCodeImageView"
+        android:layout_width="match_parent"
+        android:layout_height="300px"
+        android:padding="10dp"
+        android:src="@drawable/qr_code_placeholder"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -112,3 +142,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
