--- a/app/app/src/main/res/layout/activity_create_event.xml
+++ b/app/app/src/main/res/layout/activity_create_event.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
@@ -34,7 +34,7 @@
             android:id="@+id/editPosterImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EDIT POSTER"
+            android:text="ADD/EDIT POSTER"
 
 
             />
@@ -105,42 +105,73 @@
 
 
     </LinearLayout>
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
+
+        <RadioButton
+            android:id="@+id/generateCheckinQRradioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Generate new QR Code" />
+
+        <RadioButton
+            android:id="@+id/reuseCheckinQRradioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reuse existing QR Code" />
+    </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
         <Button
-            android:id="@+id/generateQRCodeButton"
+            android:id="@+id/generateCheckinQRCodeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Generate QR Code"
             />
         <Button
-            android:id="@+id/reuseQRCodeButton"
+            android:id="@+id/reuseCheckinQRCodeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Reuse QR Code"
             />
     </LinearLayout>
     <ImageView
-        android:id="@+id/QRCodeImageView"
+        android:id="@+id/checkinQRCodeImageView"
         android:layout_width="match_parent"
         android:layout_height="300px"
         android:padding="10dp"
         android:src="@drawable/qr_code_placeholder"/>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/generatePromoQRCodeButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:text="Generate Promo QR Code"
+        android:layout_gravity="center"
+        />
+
+    <ImageView
+        android:id="@+id/promoQRCodeImageView"
+        android:layout_width="match_parent"
+        android:layout_height="300px"
+        android:padding="10dp"
+        android:src="@drawable/qr_code_placeholder"/>
+
+
     <Button
         android:id="@+id/confirmCreateEventButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm"
+        android:layout_gravity="center"
         />
-    </LinearLayout>
+
 
 </LinearLayout>
 </ScrollView>
