--- a/app/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/app/src/main/res/layout/activity_create_profile.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,14 +19,39 @@
             android:textStyle="bold"
             android:padding="20dp"
             android:textAlignment="center"/>
+        <!-- CardView for circular profile view -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="155dp"
+            android:layout_height="155dp"
+            app:cardCornerRadius="250dp"
+            app:cardBackgroundColor="@color/White"
+            android:layout_gravity="center">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:cardCornerRadius="250dp"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/profileImage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:scaleType="centerCrop"/>
+
+            </androidx.cardview.widget.CardView>
+
+        </androidx.cardview.widget.CardView>
+        <!--
         <ImageView
             android:id="@+id/profileImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:background="@drawable/profile_bg"
             android:layout_gravity="center"
             android:contentDescription="@string/profileimage"
             android:padding="20dp" />
+            -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +62,7 @@
                 android:id="@+id/editProfileImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/add_edit_picture"
+                android:text="@string/add_picture"
                 />
         </LinearLayout>
 
