--- a/app/app/src/main/res/layout/activity_create_event.xml
+++ b/app/app/src/main/res/layout/activity_create_event.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/Background">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -16,6 +17,7 @@
         android:text="Create Event"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:textColor="@color/MainTextTitle"
         android:padding="20dp"
         android:textAlignment="center"/>
 
@@ -47,10 +49,11 @@
         android:padding="20dp"
         android:weightSum="100">
     <com.google.android.material.textfield.TextInputLayout
-
+        style="@style/TextInputStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="25">
+        android:layout_weight="25"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eventNameEditText"
@@ -60,6 +63,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextInputStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="25">
@@ -76,9 +80,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="25">
+            style="@style/TextInputStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:background="@color/ElementBackground">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eventStartTimeEditText"
@@ -89,9 +95,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/TextInputStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="25"
+
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -103,9 +111,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/TextInputStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="25">
+        android:layout_weight="25"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eventLocationEditText"
