--- a/app/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/app/src/main/res/layout/activity_create_profile.xml
@@ -73,6 +73,7 @@
             android:padding="20dp"
             android:weightSum="100">
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/TextInputStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="25"
