--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.QRCheckin" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:textColorHint">@color/BodyText</item>
+        <item name="colorPrimary">@color/Button</item>
     </style>
     <style name="Theme.QRCheckin" parent="Base.Theme.QRCheckin">
         <item name="android:textColorHint">@color/BodyText</item>
