--- a/app/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/app/src/main/res/layout/activity_edit_event.xml
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="This Event does/does not have a Promo QR Code"
-            android:textColor="@color/BodyText"
+            android:textColor="@color/BodyText"/>
         <CheckBox android:id="@+id/checkboxGeneratePromoQRCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
