--- a/app/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/app/src/main/res/layout/activity_edit_profile.xml
@@ -142,19 +142,19 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/contAddProfileButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:text="@string/confirm" />
-
-            <Button
                 android:id="@+id/contCancelProfileButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Cancel" />
+                android:text="CANCEL" />
+
+            <Button
+                android:id="@+id/contAddProfileButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="@string/confirm" />
+
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
