--- a/app/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/app/src/main/res/layout/activity_edit_profile.xml
@@ -15,7 +15,8 @@
             android:id="@+id/editProfileTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Edit Profile"
+            android:text="EDIT PROFILE"
+            android:textColor="@color/White"
             android:textSize="25sp"
             android:textStyle="bold"
             android:padding="20dp"
