--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.QRCheckin" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:textColorHint">@color/BodyText</item>
         <item name="colorPrimary">@color/Button</item>
     </style>
+
+    <!-- Theme for the application. -->
     <style name="Theme.QRCheckin" parent="Base.Theme.QRCheckin">
         <item name="android:textColorHint">@color/BodyText</item>
     </style>
