--- a/app/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/app/src/main/res/layout/activity_edit_profile.xml
@@ -93,6 +93,7 @@
                     android:id="@+id/editUserNameText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/White"
                     android:hint="Name" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -106,6 +107,7 @@
                     android:id="@+id/edituserPhoneText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/White"
                     android:hint="@string/phone"
                     android:inputType="phone"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -121,6 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
+                    android:textColor="@color/White"
                     android:inputType = "textEmailAddress"/>
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
@@ -133,6 +136,7 @@
                     android:id="@+id/edituserHomepageText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/White"
                     android:hint="@string/homepage" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
