--- a/app/app/src/main/res/layout/activity_create_event.xml
+++ b/app/app/src/main/res/layout/activity_create_event.xml
@@ -7,7 +7,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -47,12 +47,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
-        android:weightSum="100">
+        android:weightSum="500">
     <com.google.android.material.textfield.TextInputLayout
         style="@style/TextInputStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="25"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -66,18 +65,15 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/TextInputStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="25">
+            android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/eventDescriptionEditText"
                 style="@style/TextInputStyle"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:lines="8"
+                android:layout_height="match_parent"
                 android:minLines="6"
                 android:gravity="top|start"
-                android:maxLines="10"
                 android:hint="Description" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -85,7 +81,6 @@
             style="@style/TextInputStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="25"
             android:background="@color/ElementBackground">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -100,7 +95,7 @@
         style="@style/TextInputStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="25"
+
 
         >
 
@@ -116,16 +111,31 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/TextInputStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="25"
-        >
+        android:layout_height="wrap_content"
+       >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/eventLocationEditText"
             style="@style/TextInputStyle"
+            android:id="@+id/eventLocationEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Location" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextInputStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/attendeeCapacityEditText"
+                style="@style/TextInputStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="Attendee Capacity" />
+
     </com.google.android.material.textfield.TextInputLayout>
         <CheckBox android:id="@+id/checkboxGeneratePromoQRCode"
             android:layout_width="wrap_content"
