--- a/app/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/app/src/main/res/layout/activity_create_profile.xml
@@ -131,7 +131,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/White"
-                    android:hint="@string/homepage" />
+                    android:hint="@string/u" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
