--- a/app/app/src/main/res/layout/profile.xml
+++ b/app/app/src/main/res/layout/profile.xml
@@ -8,7 +8,6 @@
     android:background="#111834"
     tools:context=".ProfileActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,31 +19,27 @@
         android:paddingEnd="16dp">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Profile"
-            android:textColor ="@color/White"
+            android:textAlignment="center"
+            android:textColor="@color/White"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:gravity="start|center_vertical"/>
-
-
+            />
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image_button"
+        android:id="@+id/profile_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/deafult_profile_photo"
-        android:clickable="true"
         android:layout_gravity="center_horizontal"
-        android:focusable="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:civ_border_width="2dp"
         app:civ_border_color="#FF000000"
-        android:contentDescription="default profile photo"/>
-
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,7 +48,7 @@
         android:paddingStart="16dp"
         android:background="#102341"
         android:paddingEnd="16dp"
-        android:gravity="center_vertical">
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,16 +57,15 @@
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/White" />
 
-        <EditText
-            android:id="@+id/user_name_input"
+        <TextView
+            android:id="@+id/user_name_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="     Enter Name"
             android:textColor="@color/White"
-            android:textColorHint="@color/White" />
-
+            android:paddingStart="16dp"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,16 +82,14 @@
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/White" />
 
-        <EditText
-            android:id="@+id/user_phoneNumber_input"
+        <TextView
+            android:id="@+id/user_phone_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="     Enter Phone number"
-            android:textColorHint="@color/White"
-            android:textColor="@color/White" />
-
-
+            android:textColor="@color/White"
+            android:paddingStart="16dp"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -114,59 +106,61 @@
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/White" />
 
-        <EditText
-            android:id="@+id/user_email_input"
+        <TextView
+            android:id="@+id/user_email_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="     Enter Email"
-            android:textColorHint="@color/White"
-            android:textColor="@color/White" />
-
-
+            android:textColor="@color/White"
+            android:paddingStart="16dp"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingStart="16dp"
-
+        android:background="#102341"
         android:paddingEnd="16dp"
-        android:paddingBottom="180dp"
         android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="URL:"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/user_url_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/White"
+            android:paddingStart="16dp"/>
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:padding="16dp">
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_back_events"
+            android:id="@+id/button_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BACK"
-            app:backgroundTint="#3D5AF1"
             android:textColor="@android:color/white"
-            android:autofillHints="Back"
-            android:contentDescription="scan QR code" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            app:backgroundTint="#3D5AF1" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_edit_events"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
             android:text="EDIT"
-            app:backgroundTint="#3D5AF1"
             android:textColor="@android:color/white"
-            android:autofillHints="check in"
-            android:contentDescription="Edit" />
-
+            app:backgroundTint="#3D5AF1" />
     </LinearLayout>
 
 </LinearLayout>
