--- a/app/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/app/src/main/res/layout/activity_edit_profile.xml
@@ -137,7 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/White"
-                    android:hint="@string/homepage" />
+                    android:hint="URL" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
