--- a/app/app/src/main/res/layout/qr_scanner.xml
+++ b/app/app/src/main/res/layout/qr_scanner.xml
@@ -6,7 +6,12 @@
     android:orientation="vertical"
     android:background="#111834"
     tools:context=".QRScannerActivity">
-
+    <ImageButton
+        android:id="@+id/button_backArrow"
+        android:layout_width="35dp"
+        android:layout_height="44dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/baseline_arrow_back" />
     <TextView
         android:id="@+id/tvScanQRCode"
         android:layout_width="match_parent"
