--- a/app/app/src/main/res/layout/qr_generator.xml
+++ b/app/app/src/main/res/layout/qr_generator.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/Background">
     <TextView
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
     <ImageView
         android:id="@+id/checkinQRCodeImageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:padding="20dp"
         android:src="@drawable/qr_code_placeholder"/>
 
@@ -45,5 +45,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm"
+        android:layout_gravity="center"
         />
 </LinearLayout>
